# fm

./: .envtemplate  .gitignore  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  readme.md
api/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_image_url.py  0002_image_picture.py  0003_alter_image_picture.py  0004_rename_picture_image_url.py  0005_rename_url_image_picture.py
api/utils/: image_extensions.py
fm/: asgi.py  settings.py  urls.py  wsgi.py
images/: models.py
tests/: conftest.py  factories.py  settings.py
tests/api/: test_endpoint.py  test_image_model_methods.py
