[tool.poetry]
name = "fm"
version = "0.1.0"
description = ""
authors = ["Marcin Jarosiński <marcin.jarosinski@stxnext.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.4"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
