[tool.poetry]
name = "fm"
version = "0.1.0"
description = ""
authors = ["Marcin Jarosiński <marcin.jarosinski@stxnext.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.4"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.5"
python-dotenv = "^0.21.0"
django-filter = "^22.1"
django-storages = "^1.13.2"
boto3 = "^1.26.39"
Pillow = "^9.3.0"
drf-spectacular = "^0.25.1"
pytest = "^7.2.0"
pytest-factoryboy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
